--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -25,7 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Imports"
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
    ]
   },
   {
@@ -55,6 +62,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir laden zunächst unsere beiden Datensätze in ```DataFrames```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -68,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance Measures"
+    "## Performance Measures"
    ]
   },
   {
@@ -76,6 +90,13 @@
    "metadata": {},
    "source": [
     "### Helpers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nun definieren wir eine Funktion, um später alle Modelle innerhalb dieses Notebooks miteinander visuell vergleichen zu können."
    ]
   },
   {
@@ -107,6 +128,27 @@
    "metadata": {},
    "source": [
     "### Funktionen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Desweiteren definieren wir Funktionen zur Visualisierung der Performance unserer Modelle.\n",
+    "Als Kriterien für die Performancemessung nutzen wir `R²`, `Adjusted R²`, `MAE` sowie `RMSE`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Der `R²`-Wert (Bestimmtheitsmaß) liegt zwischen 0 und 1, wobei 1 bedeutet, dass das Modell die gesamte Variation der abhängigen Variablen erklärt, und 0 bedeutet, dass das Modell keine über die Vorhersage des Durchschnitts hinausgehende Erklärungskraft hat. Ein R²-Wert von 0,5 zeigt beispielsweise, dass 50% der Schwankungen der tatsächlichen Werte durch das Modell erklärt werden können. Dies bedeutet, dass das Modell einen mäßigen Erfolg bei der Erklärung der beobachteten Schwankungen hat. Es gibt jedoch noch Raum für Verbesserungen, da 50 % der Schwankungen nicht durch das Modell erklärt werden.\n",
+    "\n",
+    "Der `Adjusted R²`-Wert ist eine erweiterte Version des `R²`-Werts und berückstigt zusätzliche Informationen über die Anzahl der verwendeten unabhängigen Variable. Die Verwendung von `Adjusted R²` bietet eine bereinigte Bewertung der Modellanpassung und hilft Overfitting besser zu beurteilen.\n",
+    "\n",
+    "Der `MAE` steht für \"Mean Absolute Error\" (Durchschnittlicher Absoluter Fehler) und wird verwendet, um die durchschnittliche absolute Abweichung zwischen den tatsächlichen und vorhergesagten Werten zu quantifizieren. Er wird bevorzugt, wenn Ausreißer in den Daten weniger stark gewichtet werden sollen, da der absolute Betrag genommen wird. Je niedriger der MAE, desto besser ist die Modellleistung. Wenn beispielsweise der MAE 0 ist, bedeutet dies, dass das Modell perfekte Vorhersagen getroffen hat. Der MAE ist leicht zu interpretieren, da er angibt, um wie viel Einheiten die durchschnittliche Vorhersage des Modells von den tatsächlichen Werten abweicht.\n",
+    "\n",
+    "Der `RMSE` steht für Root Mean Squared Error und gibt die durchschnittliche quadratische Abweichung zwischen den tatsächlichen und vorhergesagten Werten an. Ein niedriger RMSE weist auf genauere Vorhersagen hin. Im Gegensatz zum `MAE` betont der `RMSE` größere Fehler stärker, da er den quadratischen Fehler verwendet."
    ]
   },
   {
@@ -188,7 +230,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Split Data"
+    "## Split Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir splitten die ```train_data``` nochmals in `train` und `validate`, sodass wir unsere Modelle im weiteren Verlauf unabhängig von den Testdaten valdieren können."
    ]
   },
   {
@@ -215,6 +264,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Um unser Baseline Modell trainieren zu können, müssen wir Vorverarbeitungsschritte durchführen. Diese werden in der ```minimal_preprocessing``` Pipeline definiert.\n",
+    "\n",
+    "Die Summe der beiden Spalten ```casual``` und ```registered``` ergibt den Wert von ```cnt```, diese sind in der Beschreibung des Datensatzes zudem als Labels beschrieben, daher werden sie entfernt.\n",
+    "\n",
+    "Zudem entfernen wir `dteday`.\n",
+    "\n",
+    "Alle ```NaN``` Werte werden unter Anwendung des ```SimpleImputer``` durch den jeweiligen Mittlewert aufgefüllt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -225,6 +287,13 @@
     "    (SimpleImputer(strategy='mean'), ['season', 'hum']),\n",
     "    remainder='passthrough'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die einzelnen Schritte der erzeugten Pipeline werden nacheinander ausgeführt."
    ]
   },
   {
@@ -244,6 +313,13 @@
    "metadata": {},
    "source": [
     "### Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Das Modell wird nun auf dem verarbeiteten Datensatz trainiert."
    ]
   },
   {
@@ -295,6 +371,13 @@
    ],
    "source": [
     "pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im Anschluss nutzten wir die Validierungsdaten, um das Modell damit zu evaluieren."
    ]
   },
   {
@@ -359,7 +442,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 Missing Values"
+    "Aus dem Diagramm wird ersichtlich, dass unser ```baseline_model``` aufgrund der Ausreißer noch Schwierigkeiten bei der Vorhersage hat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 Missing Value Handling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wie wir bereits in Task 1 erarbeitet haben, weisen die Spalten `season` und `hum` fehlende Werte auf. \n",
+    "\n",
+    "Im `minimal_preprocessing` werden alle `NaN` Werte mit durch den `SimpleImputer` durch die Methode `mean` aufgefüllt.\n",
+    "\n",
+    "Nun sollen die fehlenden Werte in der Spalte `season` anhand des vorliegenden Datums in der entsprechenden Zeile aufgefüllt werden. "
    ]
   },
   {
@@ -367,6 +468,13 @@
    "metadata": {},
    "source": [
     "### Helpers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Damit wir die entsprechende Jahreszeit anhand des Datums bestimmen können, müssen wir die Werte der Spalte `dteday` zuvor in `datetime` Objekte umwandeln."
    ]
   },
   {
@@ -419,6 +527,17 @@
     "            X[column] = pd.to_datetime(X[column], format=self.date_format)\n",
     "        \n",
     "        return X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Klasse `SeasonImputer` bestimmt die Jahreszeit anhand eines Datums. \n",
+    "\n",
+    "Dabei liest sie den Tag des entsprechenden Datums aus und weist diesen der entsprechenden Jahreszeit zu.\n",
+    "\n",
+    "Es gibt vier fest definierte Zeitfenster, die verwendet werden um den Tag des Jahres in vier Jahreszeiten einzuteilen"
    ]
   },
   {
@@ -491,6 +610,13 @@
    "metadata": {},
    "source": [
     "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die beiden Teilschritte werden im Folgenden der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
@@ -649,7 +775,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Data Correction"
+    "Anhand der Performace Measures ist zu erkennen, dass sich durch diesen Schritt keine wesentlichen Verbesserungen ergeben haben."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3 Data Corrections"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im nachfolgenden Abschnitt wollen wir einige Bereinigungen und Korrekturen vornehmen.\n",
+    "\n",
+    "Aus der deskriptiven Statistik ist ersichltich, dass das Minimum der Variable `windspeed` bei `-1` liegt. \n",
+    "\n",
+    "Da die Windgeschwindigkeit nicht negativ sein kann, treffen wir die Annahme, dass es sich hierbei um Fehler handeln muss.\n",
+    "\n",
+    "Auch bei der Varialbe `weekday` fallen Werte von `-1` auf, die wir korrigieren wollen."
    ]
   },
   {
@@ -657,6 +803,13 @@
    "metadata": {},
    "source": [
     "### Helpers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zunächst definieren wir einen Custom Transformer, der die Wochentage basierend auf der Datumsspalte, mappt."
    ]
   },
   {
@@ -711,6 +864,13 @@
     "            X[self.target_column] = (X[self.date_column].dt.dayofweek + 1) % 7\n",
     "        \n",
     "        return X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die folgenden Custom Transformer können die fehlerhaften Werte entweder entfernen oder duch den Mittelwert ersetzen."
    ]
   },
   {
@@ -827,6 +987,13 @@
    "metadata": {},
    "source": [
     "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die beiden Teilschritte werden im Folgenden der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
@@ -1008,6 +1175,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nachdem die Daten korrigiert wurden, ist keine nennenswerte Verbesserung der Preformance Measures zu erkennen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 4 Outlier Handling"
    ]
   },
@@ -1015,7 +1189,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In der explorativen Datenanalyse ist zu sehen, dass die Gesamtanzahl der geliehenen Fahrräder `cnt` und die Anzahl der durch `casual` Nutzer geliehenen Fahrräder unrealistisch hohe Maximalwerte aufweisen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Helpers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir definieren Custom Transformer, die die Outlier unter der Anwendung von `Z-Scores` identifizieren und entweder entfernten oder auffüllen."
    ]
   },
   {
@@ -1142,6 +1330,13 @@
    "metadata": {},
    "source": [
     "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die neuen Teilschritte werden der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
@@ -1347,7 +1542,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Es ist zu erkennen, dass vor allem der MAE, nach der Entfernung der Outliers, eine wesentliche Verbesserung zeigt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 5 Feature Transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im nächsten Schritt, Feature Transformation, möchten wir zunächst `One Hot Encoding` auf ausgewählte Varialen anwenden. Im Anschluss normalisieren wir ausgewählte Variablen mit Hilfe eines `StandardScalers`."
    ]
   },
   {
@@ -1362,6 +1571,21 @@
    "metadata": {},
    "source": [
     "### Helpers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir möchten für die Variablen `weekday`, `season` und `weathersit` mittels One Hot Encoding separate binäre Spalten für jede Ausprägung erstellen. \n",
+    "\n",
+    "Da wir für die Variable `weekday` sieben neue Variablen generieren würden und die einzelnen Wochentage nicht aussagekräftig sind, möchten wir die Tage in Wochentage und Wochenende gruppieren. Durch diese Unterscheidung bietet sich eine höhere Aussagekraft. Im gleichen Zuge verliert die Variable `workingday` an Aussagekraft, weshalb wir diese im weiteren Verlauf entfernen.\n",
+    "\n",
+    "Auch für die Variable `month` könnte One Hot Encoding durchgeführt werden und es würden zwölf neue Variablen generiert werden. Die einzig sinnvolle Möglichkeit zur Gruppierung sind nach unserer Meinung die Jahreszeiten. Im Datensatz liegt bereits die Variable `season` vor. Aufgrund dessen verzichten wir auf One Hot Encoding für `month` und entfernen die Variable stattdessen. Die Variable `season` hingegen soll weiterhin bestehen bleiben.\n",
+    "\n",
+    "Desweiteren werden die ursprünglichen drei Spalten `weekday`, `season` und `weathersit` entfernt.\n",
+    "\n",
+    "Wir definieren zur Durchführung dieser Teilschritte folgenden Transformer:"
    ]
   },
   {
@@ -1423,6 +1647,13 @@
    "metadata": {},
    "source": [
     "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die neuen Teilschritte werden der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
@@ -1626,6 +1857,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Nach derAnwendeung von One Hot Encoding und der Gruppierung zeigt sich erneut eine leicht Verbesserung der Performance Measures."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5.2 Normalisierung"
    ]
   },
@@ -1633,7 +1871,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Im Folgenden werden die Features mit Hilfe eines ```StandardScalers``` normalisiert, um den Einfluss der Gewichtung einzelner Features aufgrund ihrer Wertebereiche zu eliminiern.\n",
+    "\n",
+    "Es ist zu erwarten, dass der Mean Absolute Error durch die Normalisierung geringer wird."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir führen die Normalisierung für die Variablen `temp`, `atemp`, `windspeed`, `leaflets` und `hum` durch. Der Teilschritt wird im Anschluss der bestehenden Pipeline hinzugefügt."
    ]
   },
   {
@@ -1852,7 +2106,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6 Multikolinearität"
+    "Durch das Anwenden des `StandardScaler` zeigt sich eine nur geringfügige Verbesserung des Mean Absolute Errors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6 Multikollinearität"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aus Task 1 ist zu sehen, dass die Variablen `atemp`, und `temp` eine starke Korrelation sowie hohe VIF-Wert aufweisen.\n",
+    "\n",
+    "Da Multikollineariät später zu Problemen bei der Regression führen kann, werden wir eine der beiden Variablen, in diesem Falle `temp` entfernen.\n",
+    "\n",
+    "Wir verwenden die gefühlte Temperatur `atemp` weiter, da diese zum Einen aus der tatasächlichen Temperatur und zum Anderen aus der Luftfeuchtigkeit `hum` hervorgeht."
    ]
   },
   {
@@ -1860,6 +2132,13 @@
    "metadata": {},
    "source": [
     "### Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wir entfernen die Variable `temp` und fügen diesen Teilschritt der Pipeline hinzu."
    ]
   },
   {
@@ -2080,14 +2359,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validation"
+    "Durch das Entfernen von `temp` sehen wir eine leichte Verbesserung der Performance Measures."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With Outliers"
+    "# 7 Evaluation on Test Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im letzten Schritt folgt nun die Evaluierung unseres Modells anhand der Testdaten.\n",
+    "\n",
+    "Da in den Testdaten noch Ausreißer vorliegen, wird die Evaluierung leicht verzerrt. Um den Einfluss herauszustellen, führen wir die Evaluierung einmal mit den Testdaten durch, die noch Ausreißer enthalten und einmal mit den um die Ausreißer bereinigten Testdaten."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.1 Testdata with Outliers"
    ]
   },
   {
@@ -2117,6 +2412,13 @@
    ],
    "source": [
     "measures = performance_measures(test_data['cnt'], y_pred, len(pipeline.named_steps.linearregression.coef_))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Performance Measures zeigen eine moderate Performance unseres Modells an."
    ]
   },
   {
@@ -2152,7 +2454,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Without Outliers"
+    "Aus der Visualisierung ist ersichltich, dass das Modell die Ausreißer in den Testdaten nicht abbilden kann. Dadurch werden zudem die Performance Measures verzerrt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.2 Testdata without Outliers"
    ]
   },
   {
@@ -2310,6 +2619,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nutzen wir zur Evaluierung unseres Modell die um Ausreißer bereinigten Testdaten, so zeigen die Performance Measures eine deutlich bessere Performance unseres Modells."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {},
@@ -2342,7 +2658,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Performance Vergleich"
+    "Aus der Visualisierung ist nun ersichtlich, dass die Ausreißer in den Testdaten nicht mehr vorliegen und das Modell gut performt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8 Performance Vergleich"
    ]
   },
   {
@@ -2351,7 +2674,7 @@
    "source": [
     "Abschließend ist aus den folgenden Diagrammen ersichtlich, wie sich die Performance Measures im Laufe des Data Preparation Prozesses verbessert haben. \n",
     "\n",
-    "Während die Werte für RMSE und MAE reduziert wurden, haben die Werte für R-Squared sowie Adjusted R-Squared stetig zugenommen."
+    "Während die Werte für RMSE und MAE reduziert wurden, haben die Werte für R-Squared sowie Adjusted R-Squared zugenommen."
    ]
   },
   {
@@ -2388,6 +2711,13 @@
    "metadata": {},
    "source": [
     "# Exportieren der Daten"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Daten werden abschließend exportiert."
    ]
   },
   {
