finished model selection task 3

--- a/project/Introduction-Data-Science-Task-1.ipynb
+++ b/project/Introduction-Data-Science-Task-1.ipynb
@@ -25,7 +25,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 Setup"
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
    ]
   },
   {
@@ -44,13 +51,6 @@
     "from sklearn.preprocessing import QuantileTransformer\n",
     "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2 Import der Daten"
    ]
   },
   {
@@ -767,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Missing Values ##"
+    "# 1 Missing Values"
    ]
   },
   {
@@ -853,7 +853,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4 Descriptive Analysis"
+    "# 2 Descriptive Analysis"
    ]
   },
   {
@@ -1144,7 +1144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5 Exploratory Data Analysis and Relationships ##"
+    "# 3 Exploratory Data Analysis and Relationships"
    ]
   },
   {
@@ -1272,23 +1272,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-d7686fa6d1644ac5aaf4fbd2a6ba5004.vega-embed {\n",
+       "  #altair-viz-2abcc3ffd7df440fa5067716cbeb6703.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-d7686fa6d1644ac5aaf4fbd2a6ba5004.vega-embed details,\n",
-       "  #altair-viz-d7686fa6d1644ac5aaf4fbd2a6ba5004.vega-embed details summary {\n",
+       "  #altair-viz-2abcc3ffd7df440fa5067716cbeb6703.vega-embed details,\n",
+       "  #altair-viz-2abcc3ffd7df440fa5067716cbeb6703.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-d7686fa6d1644ac5aaf4fbd2a6ba5004\"></div>\n",
+       "<div id=\"altair-viz-2abcc3ffd7df440fa5067716cbeb6703\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-d7686fa6d1644ac5aaf4fbd2a6ba5004\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-d7686fa6d1644ac5aaf4fbd2a6ba5004\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2abcc3ffd7df440fa5067716cbeb6703\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2abcc3ffd7df440fa5067716cbeb6703\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1448,23 +1448,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-f9788c2acdbe49158d29a72c14dc973f.vega-embed {\n",
+       "  #altair-viz-68bb599f31774570b563cdf82392235a.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-f9788c2acdbe49158d29a72c14dc973f.vega-embed details,\n",
-       "  #altair-viz-f9788c2acdbe49158d29a72c14dc973f.vega-embed details summary {\n",
+       "  #altair-viz-68bb599f31774570b563cdf82392235a.vega-embed details,\n",
+       "  #altair-viz-68bb599f31774570b563cdf82392235a.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-f9788c2acdbe49158d29a72c14dc973f\"></div>\n",
+       "<div id=\"altair-viz-68bb599f31774570b563cdf82392235a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f9788c2acdbe49158d29a72c14dc973f\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f9788c2acdbe49158d29a72c14dc973f\");\n",
+       "    if (outputDiv.id !== \"altair-viz-68bb599f31774570b563cdf82392235a\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-68bb599f31774570b563cdf82392235a\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1755,7 +1755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 Weitere Erkenntnisse in Bezug auf die Response-Variablen"
+    "# 4 Weitere Erkenntnisse in Bezug auf die Response-Variablen"
    ]
   },
   {
@@ -3163,7 +3163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7 Outlier im Label"
+    "# 5 Outlier im Label"
    ]
   },
   {
