added updated outlierremover to task 2

--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -286,46 +286,49 @@
     "    def __init__(self, target: str, threshold: float = 3.0):\n",
     "        \"\"\"\n",
     "        Initialize the transformer with the target column for outlier removal and the Z-score threshold.\n",
-    "        \n",
+    "\n",
     "        Args:\n",
     "            target (str): The target column for outlier removal.\n",
     "            threshold (float): Z-score threshold to consider a data point an outlier.\n",
     "        \"\"\"\n",
     "        self.target = target\n",
     "        self.threshold = threshold\n",
-    "    \n",
+    "        self.outliers = None\n",
+    "        \n",
     "    def fit(self, X, y=None):\n",
     "        \"\"\"\n",
-    "        Fit method for the transformer. This transformer does not need to learn anything from the data,\n",
-    "        so it just returns itself.\n",
-    "        \n",
+    "        Fit method for the transformer. Determines which data points in the target column are outliers\n",
+    "        based on the Z-score threshold.\n",
+    "\n",
     "        Args:\n",
-    "            X (pd.DataFrame): The input DataFrame.\n",
+    "            X (pd.DataFrame): The input DataFrame with the target column.\n",
     "            y (None, optional): Not used, for compatibility with scikit-learn's transformer requirements.\n",
-    "        \n",
+    "\n",
     "        Returns:\n",
-    "            self: The fitted transformer.\n",
+    "            self: The fitted transformer, with outliers identified.\n",
     "        \"\"\"\n",
-    "        return self\n",
-    "    \n",
-    "    def transform(self, X):\n",
-    "        \"\"\"\n",
-    "        Remove outliers from the DataFrame based on the Z-score threshold in the target column.\n",
-    "        \n",
-    "        Args:\n",
-    "            X (pd.DataFrame): The input DataFrame to transform.\n",
-    "        \n",
-    "        Returns:\n",
-    "            pd.DataFrame: The DataFrame with outliers removed from the specified target column.\n",
-    "        \"\"\"\n",
-    "        X = X.copy()  # Work on a copy of the DataFrame to avoid altering original data\n",
     "        if self.target in X.columns:\n",
     "            # Calculate Z-scores for the target column\n",
     "            z_scores = zscore(X[self.target].dropna())\n",
     "            # Identify outliers\n",
-    "            outliers = abs(z_scores) > self.threshold\n",
-    "            # Drop outliers\n",
-    "            X = X[~X[self.target].index.isin(X[self.target].dropna().index[outliers])]\n",
+    "            self.outliers = abs(z_scores) > self.threshold\n",
+    "        return self\n",
+    "    \n",
+    "    def transform(self, X, y=None):\n",
+    "        \"\"\"\n",
+    "        Transform method for the transformer. Removes outliers from the DataFrame based on the logic\n",
+    "        determined in the fit method.\n",
+    "\n",
+    "        Args:\n",
+    "            X (pd.DataFrame): The input DataFrame to transform by removing outliers.\n",
+    "\n",
+    "        Returns:\n",
+    "            pd.DataFrame: The DataFrame with outliers removed from the specified target column.\n",
+    "        \"\"\"\n",
+    "        X = X.copy()  # Work on a copy of the DataFrame to avoid altering original data\n",
+    "        if self.outliers is not None:\n",
+    "            # Remove the outliers identified in the fit method\n",
+    "            X = X[~X[self.target].index.isin(X[self.target].dropna().index[self.outliers])]\n",
     "            print(f\"{X.shape[0]} rows remaining after removing outliers.\")\n",
     "        return X"
    ]
