--- a/project/Introduction-Data-Science-Task-3.ipynb
+++ b/project/Introduction-Data-Science-Task-3.ipynb
@@ -1887,40 +1887,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 XGBRegressor"
+    "### 3.2 PassiveAggressiveRegressor "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Number of Estimators**: Hier wird die Anzahl der Bäume (Schätzer) im Ensemble festgelegt. Eine höhere Anzahl von Bäumen kann zu einer besseren Modellleistung führen, erfordert jedoch mehr Rechenressourcen. Wir legen die Werte 50, 100 und 200 zur Auswahl fest.\n",
-    "- **Max Depth**: Max Depth meint die maximale Tiefe eines einzelnen Entscheidungsbaums. Eine tiefere Baumstruktur kann zu Overfitting führen, während eine flachere Struktur zu Underfitting führen kann. Wir verwenden hier die Werte None, 5 und 10. None bedeutet, dass es keine festgelegte maximale Tiefe gibt.\n",
-    "- **Max Leaves**: Max Leaves meint die maximale Anzahl von Blättern in einem Baum und begrenzt das Wachstum der Bäume.\n",
-    "- **Learning Rate**: Die Lernrate steuert, wie stark jeder Baum die vorherigen Bäume korrigiert. Eine niedrige Lernrate erfordert im Normalfall mehr Bäume, um den gleichen Effekt zu erzielen, kann jedoch im Gegenzug zu einer besseren Generalisierung führen. Hier werden Werte von 0.1 bis 0.5 in Schritten von 0.1 verwendet.\n",
-    "- **Booster**: Hier wird die Art des Boosters, der verwendet wird, festgelegt. \"gbtree\" steht für Entscheidungsbäume, \"gblinear\" für lineare Modelle und \"dart\" für Dropout-gestützte Entscheidungsbäume.\n",
-    "- **Grow Policy**: Die Grow Policy legt die Strategie für das Wachstum der Bäume fest. 0 steht für \"depthwise\", 1 für \"lossguide\". Bei \"depthwise\" wächst der Baum schichtweise, wohingegen \"lossguide\" eine strukturiertere Wachstumsrichtlinie basierend auf dem Verlust verwendet.\n",
-    "- **Gamma**: Dieser Paramter gibt an, wie stark ein Baumzweig, basierend auf dem Verlustrückgang, geschnitten wird. Ein höherer Gamma-Wert führt zu konservativerem Pruning.\n",
-    "- **Regularization Alpha**: Hiermit ist der L1 Regularisierungsterm auf den Gewichtungen der Blätter gemeint. Dieser hilft bei der Vermeidung von Overfitting durch Sparsamkeit.\n",
-    "- **Regularization Lambda**: Dieser Parameter meint den L2 Regularisierungsterm auf den Gewichtungen der Blätter und hilft bei der Vermeidung von Overfitting durch Schrumpfung der Gewichtungen.\n",
-    "- **Metric**: Metric meint die Bewertungsmetrik, die während des Trainings verwendet wird. Wir verwenden hier den Mean Absolute Error (skm.mean_absolute_error) als Bewertungsmetrik."
+    "- **Loss**: Wie bei anderen Regressionsmodellen bezieht sich Loss auf das Maß für den Fehler zwischen den vorhergesagten und den tatsächlichen Werten. Der PassiveAggressiveRegressor unterstützt verschiedene Loss-Funktionen, darunter die Quantilregression (quantile), squared_error, absolute_error und huber, die eine Kombination aus quadratischem und absolutem Fehler darstellt.\n",
+    "\n",
+    "- **C**: Dieser Parameter steuert die Stärke der Regularisierung. Eine höhere C-Wert bedeutet eine geringere Regularisierung, was dazu führen kann, dass das Modell stärker auf die Daten passt, aber auch anfälliger für Overfitting ist.\n",
+    "\n",
+    "- **Epsilon**: Epsilon ist ein Toleranzparameter, der angibt, wie groß der Fehler sein kann, bevor eine Aktualisierung des Modells erfolgt. Ein kleinerer Epsilon-Wert führt zu einem schnelleren Lernen, während ein größerer Wert das Modell stabiler macht, aber möglicherweise länger braucht, um zu konvergieren.\n",
+    "\n",
+    "- **Average**: Dieser Parameter steuert, wie die Gewichtungen der Instanzen über die Zeit gemittelt werden. Mögliche Optionen sind \"True\", was bedeutet, dass eine gleitende Durchschnittsbildung erfolgt, und \"False\", was bedeutet, dass keine Durchschnittsbildung erfolgt.\n",
+    "\n",
+    "- **Max Iterations**: gibt die maximale Anzahl von Iterationen an, die das Modell durchlaufen soll, bevor es anhält. Es beeinflusst die Konvergenz des Modells und sollte angemessen groß gewählt werden, um sicherzustellen, dass das Modell ausreichend trainiert ist.\n",
+    "\n",
+    "- **Tolerance**: Tolerance ist ein weiterer Parameter, der die Konvergenz des Modells steuert. Es gibt an, wie viel die Loss-Funktion sich ändern muss, bevor das Modell aufhört zu lernen.\n",
+    "\n",
+    "- **Warm Start**: Wenn dieser Parameter auf \"True\" gesetzt ist, wird das Modell mit den Gewichten des vorherigen Aufrufs initialisiert. Das kann nützlich sein, um das Modell inkrementell zu trainieren.\n",
+    "\n",
+    "- **Shuffle**: Shuffle steuert, ob die Daten vor jedem Schritt zufällig neu angeordnet werden. Das kann helfen, Overfitting zu vermeiden und sicherzustellen, dass das Modell besser generalisiert.\n",
+    "\n",
+    "- **Random State**: Dieser Parameter ermöglicht die Reproduzierbarkeit der Ergebnisse, indem ein fester Zufallszahlengenerator verwendet wird."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 ExtraTressRegressor"
+    "### 3.3 HuberRegressor"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Number of Estimators**: Hier wird die Anzahl der Bäume (Schätzer) im Ensemble festgelegt. Eine höhere Anzahl von Bäumen kann zu einer besseren Modellleistung führen, erfordert jedoch mehr Rechenressourcen. Wir legen die Werte 50, 100 und 200 zur Auswahl fest.\n",
-    "- **Criterion**: Criterion wählt das Kriterium aus, das zur Auswahl der besten Aufteilung in jedem Entscheidungsbaumknoten verwendet wird ,z.B. squared_error (mittlerer quadratischer Fehler), absolute_error (mittlerer absoluter Fehler), friedman_mse (verbesserte MSE für Gradient Boosting) oder poisson (Poisson-Regression für Zählvariablen).\n",
-    "- **Max Features**: Dieser Paramter definiert die maximale Anzahl der Merkmale, die für die Suche nach der besten Aufteilung in einem Baumknoten verwendet werden, z.B. sqrt (Quadratwurzel der Anzahl der Merkmale) oder log2 (Logarithmus zur Basis 2 der Anzahl der Merkmale):\n",
-    "- **Max Depth**: Max Depth meint die maximale Tiefe eines einzelnen Entscheidungsbaums. Eine tiefere Baumstruktur kann zu Overfitting führen, während eine flachere Struktur zu Underfitting führen kann. Wir verwenden hier die Werte None, 5 und 10. None bedeutet, dass es keine festgelegte maximale Tiefe gibt."
+    "- **Loss**: Es minimiert den Fehler durch Huber-Verlustfunktion, eine Kombination aus mittlerem quadratischen Fehler (MSE) für kleine Fehler und mittlerem absoluten Fehler für große Fehler..\n",
+    "\n",
+    "- **Alpha**: Der Alpha-Wert steuert die Toleranz des Huber-Verlusts für Ausreißer. Ein kleinerer Alpha-Wert macht das Modell robuster gegenüber Ausreißern.\n",
+    "\n",
+    "- **Fit Intercept**: Legt fest, ob ein Intercept (Bias) in die Modellanpassung einbezogen werden soll.\n",
+    "\n",
+    "- **Max Iterations**: Die maximale Anzahl von Iterationen, die das Modell durchläuft, um zu konvergieren.\n",
+    "\n",
+    "- **Epsilon**: Eine Toleranzschwelle für den Huber-Verlust, bei der zwischen linearen und quadratischen Fehlern gewechselt wird.\n",
+    "\n",
+    "- **Warm Start**: Wenn auf 'True' gesetzt, wird das Modell mit den Gewichten des vorherigen Aufrufs initialisiert."
    ]
   },
   {
