--- a/project/Introduction-Data-Science-Task-3.ipynb
+++ b/project/Introduction-Data-Science-Task-3.ipynb
@@ -2035,7 +2035,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Das Modell mit dem besten Ergebnis ist der `XGBRegressor`. Der MAE beträgt 670.95 für folgende Hyperparamter:"
+    "??? Das Modell mit dem besten Ergebnis ist der `XGBRegressor`. Der MAE beträgt 670.95 für folgende Hyperparamter:"
    ]
   },
   {
@@ -2058,123 +2058,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diese Funktion gibt alle möglichen, einzigartigen Kombinationen der unabhängigen Variablen aus. Die Liste enthält die höchste Anzahl an Features zu Beginn und wird danach immer kürzer (Backward Eliminiation)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_feature_combinations(features, length):\n",
-    "    all_combinations = []\n",
-    "    for r in range(1, length + 1):\n",
-    "        combinations = itertools.combinations(features, r)\n",
-    "        all_combinations.extend(combinations)\n",
+    "Feature Selection wird mithilfe von RFECV durchgeführt. RFECV verwendet die Ergebnisse der Kreuzvalidierung, um den optimalen Merkmalsatz zu bestimmen. Dieser Satz beinhaltet die Merkmale, die am besten zur Vorhersage der Zielvariable geeignet sind, wobei gleichzeitig Overfitting vermieden wird.\n",
     "\n",
-    "    # Backwards Elimination\n",
-    "    return all_combinations[::-1]"
+    "RFECV nutzt die rekursive Merkmalseliminierung (RFE), um den Prozess zu initiieren. Hierbei werden alle verfügbaren Merkmale verwendet und das Modell iterativ trainiert, wobei nach jeder Iteration die unbedeutendsten Merkmale entfernt werden. Die verbleibenden Merkmale werden erneut bewertet, um ihre Relevanz für die Modellleistung zu überprüfen.\n",
+    "\n",
+    "Zur Verbesserung der Zuverlässigkeit der Merkmalsauswahl wird RFECV zudem mit Kreuzvalidierung kombiniert. Der Datensatz wird dabei in verschiedene Teile unterteilt, wobei ein Teil zum Testen und die übrigen zum Trainieren des Modells verwendet werden. Dieser Prozess wird mehrmals wiederholt, um sicherzustellen, dass alle Datenpunkte sowohl im Trainings- als auch im Testset enthalten sind."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Diese Funktion nimmt eine Liste von Indexes auf und gibt die Liste der numerischen Indexes zurück. Dies wird benötigt, da die `numpy`-Arrays nach der Skalierung numerische Indexes verwenden. Um auf bestimmte Features zuzugreifen, wird der numerische Index gebraucht."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Funktion zur Evaluation einer Feature-Kombination mittels MAE."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eval_model_params(features):\n",
-    "    reg = Ridge(random_state=1)\n",
-    "    reg.fit(train_data[features], train_data[\"cnt\"])\n",
-    "\n",
-    "    y_pred = reg.predict(validation_data[features])\n",
-    "    mae = mean_absolute_error(validation_data[\"cnt\"], y_pred)\n",
-    "    coefs = reg.coef_\n",
-    "    reg\n",
-    "\n",
-    "    return dict(features=features,\n",
-    "                coefs=coefs,\n",
-    "                mae=mae)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Vorgehensweise:\n",
-    "- Es wird über alle möglichen Feature-Kombinationen iteriert und ein `Ridge`-Regressionsmodell erstellt. `Ridge` wird verwendet, da die `LinearRegression` Probleme mit overfitting verursacht.\n",
-    "- Die verwendeten Features, die Koeffizienten, sowie der MAE werden in einem DataFrame gespeichert."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_of_features = len(features)\n",
-    "feature_list = get_feature_combinations(features, num_of_features)\n",
-    "c = 0\n",
-    "print(\"Feature combinations\", len(feature_list))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Insgesamt gibt es ca. 4,2 Mio. einzigartige Kombinationen der Features. Für jede Kombination wird ein grundlegendes Modell erstellt und dessen MAE, sowie die Parameterkombination gespeichert."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_results = [{\"mae\": 0}]\n",
-    "num_of_features = len(features)\n",
-    "feature_list = get_feature_combinations(features, num_of_features)\n",
-    "c = 0\n",
-    "print(\"Feature combinations\", len(feature_list))\n",
-    "for feature_comb in feature_list:\n",
-    "    feature_results.append(eval_model_params(feature_comb))\n",
-    "\n",
-    "    c+=1\n",
-    "\n",
-    "    if c % 500 == 0:\n",
-    "        print(f\"Evaluating {len(feature_comb)}/{len(features)} feature combinations (No. {c}) - MAE: {feature_results[-1]['mae']}\", end=\"\\r\")\n",
-    "\n",
-    "feature_results.remove({\"mae\": 0})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_results = pd.DataFrame(feature_results).sort_values(\"mae\", ignore_index=True).dropna()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Die besten Ausführungsergebnisse speichern."
+    "=> ab jetzt umschreiben!\n"
    ]
   },
   {
