--- a/project/Introduction-Data-Science-Task-3.ipynb
+++ b/project/Introduction-Data-Science-Task-3.ipynb
@@ -48,14 +48,13 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn._config import set_config\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.feature_selection import RFECV, RFE\n",
+    "from sklearn.feature_selection import RFECV\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.compose import make_column_transformer\n",
-    "from lightgbm import LGBMRegressor\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
     "from sklearn.linear_model import LinearRegression, PassiveAggressiveRegressor, RANSACRegressor, HuberRegressor\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder, FunctionTransformer\n",
     "from lazypredict.Supervised import LazyRegressor\n",
     "\n",
@@ -529,7 +528,7 @@
    "outputs": [],
    "source": [
     "param_grid = {\n",
-    "    'rfe__min_features_to_select': [5, 10, 15],\n",
+    "    'rfecv__min_features_to_select': [5, 10, 15],\n",
     "    'ransacregressor__min_samples': [0.5, 0.6, 0.7],  # Proportion of total samples or absolute number\n",
     "    'ransacregressor__max_trials': [50, 100, 150],  # Maximum number of iterations for random sample selection.\n",
     "    'ransacregressor__stop_probability': [0.99, 0.999],  # Confidence level of the algorithm to terminate iterations\n",
@@ -552,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring=['r2','neg_mean_absolute_error'], refit='r2', verbose=1, n_jobs=-1)"
+    "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='r2', verbose=1, n_jobs=-1)"
    ]
   },
   {
@@ -570,7 +569,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Optimal number of features : %d\" % rfecv.n_features_)"
+    "print(\"Best parameters:\", grid_search.best_params_)\n",
+    "print(\"Best score:\", grid_search.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HuberRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "huber_regressor = HuberRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'rfecv__min_features_to_select': [5, 10, 15],\n",
+    "    'huberregressor__epsilon': [1.1, 1.2, 1.3],  # Epsilon parameter for the Huber loss\n",
+    "    'huberregressor__alpha': [0.0001, 0.001, 0.01],  # Regularization parameter\n",
+    "    'huberregressor__max_iter': [100, 200, 300],  # Maximum number of iterations\n",
+    "}\n",
+    "\n",
+    "recursive_feature_elimination = RFECV(estimator=huber_regressor, step=1, cv=5, scoring='r2')\n",
+    "\n",
+    "pipeline = make_pipeline(\n",
+    "    preprocessing_pipeline,\n",
+    "    recursive_feature_elimination,\n",
+    "    huber_regressor\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='r2', verbose=1, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search.fit(train_data, train_data['cnt'])"
    ]
   },
   {
@@ -587,20 +643,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LGBMRegressor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### HuberRegressor"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Without Outliers"
    ]
   },
@@ -609,6 +651,66 @@
    "metadata": {},
    "source": [
     "### GradientBoostingRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gradient_boosting_regressor = GradientBoostingRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'rfecv__min_features_to_select': [5, 10, 15],\n",
+    "    'gradientboostingregressor__n_estimators': [100, 200, 300],  # Number of boosting stages\n",
+    "    'gradientboostingregressor__learning_rate': [0.01, 0.1, 0.2],  # Learning rate shrinks the contribution of each tree\n",
+    "    'gradientboostingregressor__max_depth': [3, 4, 5],  # Maximum depth of the individual estimators\n",
+    "    'gradientboostingregressor__min_samples_split': [2, 3, 4],  # Minimum number of samples required to split an internal node\n",
+    "}\n",
+    "\n",
+    "recursive_feature_elimination = RFECV(estimator=gradient_boosting_regressor, step=1, cv=5, scoring='r2')\n",
+    "\n",
+    "pipeline = make_pipeline(\n",
+    "    preprocessing_pipeline,\n",
+    "    recursive_feature_elimination,\n",
+    "    gradient_boosting_regressor\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='r2', verbose=1, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search.fit(train_data_no, train_data_no['cnt'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Best parameters:\", grid_search.best_params_)\n",
+    "print(\"Best score:\", grid_search.best_score_)"
    ]
   },
   {
@@ -656,7 +758,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring=['r2', 'neg_mean_absolute_error'], refit='r2', verbose=1, n_jobs=-1)"
+    "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='r2', verbose=1, n_jobs=-1)"
    ]
   },
   {
@@ -691,7 +793,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "break"
+    "huber_regressor = HuberRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'rfecv__min_features_to_select': [5, 10, 15],\n",
+    "    'huberregressor__epsilon': [1.1, 1.2, 1.3],  # Epsilon parameter for the Huber loss\n",
+    "    'huberregressor__alpha': [0.0001, 0.001, 0.01],  # Regularization parameter\n",
+    "    'huberregressor__max_iter': [100, 200, 300],  # Maximum number of iterations\n",
+    "}\n",
+    "\n",
+    "recursive_feature_elimination = RFECV(estimator=huber_regressor, step=1, cv=5, scoring='r2')\n",
+    "\n",
+    "pipeline = make_pipeline(\n",
+    "    preprocessing_pipeline,\n",
+    "    recursive_feature_elimination,\n",
+    "    huber_regressor\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search = GridSearchCV(pipeline, param_grid, cv=5, scoring='r2', verbose=1, n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid_search.fit(train_data_no, train_data_no['cnt'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Best parameters:\", grid_search.best_params_)\n",
+    "print(\"Best score:\", grid_search.best_score_)"
    ]
   },
   {
