--- a/project/Introduction-Data-Science-Task-1.ipynb
+++ b/project/Introduction-Data-Science-Task-1.ipynb
@@ -25,6 +25,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Das vorliegende Datenset beinhaltet Daten zu verliehenen Fahrradern aus den Jahren 2011 und 2012.\n",
+    "\n",
+    "Jede der Beobachtungen stellt einen Tag dar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Setup"
    ]
   },
